// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accessibility doesnt render tables if there is no data 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -80px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -80px -12px 0 -12px;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accessibility renders aria interactions table if data is provided 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -80px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -80px -12px 0 -12px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 80px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    margin-bottom: 20px;
  }
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-5 svg {
  fill: #162740;
}

@media screen and (max-width: 1439px) {
  .emotion-5 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.24062499999999998em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.490625em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-5 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20729166666666665em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.45729166666666665em;
  }
}

.emotion-6 {
  margin-bottom: 32px;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-7 svg {
  fill: #555E74;
}

@media screen and (max-width: 1439px) {
  .emotion-7 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-7 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.33229166666666665em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36354166666666665em;
  }
}

.emotion-8 {
  overflow-x: auto;
}

.emotion-9 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-10 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
}

.emotion-11 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-14 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-15 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-16 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-17 {
  margin-left: 0px;
}

.emotion-18 {
  margin: 0;
  padding: 0;
  color: #555E74;
  white-space: nowrap;
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0;
}

.emotion-18 svg {
  fill: #555E74;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              WAI-ARIA
            </span>
          </div>
          <div
            class="emotion-6"
          >
            <p
              class="emotion-7"
            >
              Some random text
            </p>
            <div
              class="emotion-8"
            >
              <table
                class="emotion-9"
              >
                <thead>
                  <tr>
                    <th
                      class="emotion-10"
                    >
                      Category
                    </th>
                    <th
                      class="emotion-11"
                    >
                      Attribute
                    </th>
                    <th
                      class="emotion-11"
                    >
                      Value
                    </th>
                    <th
                      class="emotion-11"
                    >
                      Description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="emotion-14"
                  >
                    <td
                      class="emotion-15"
                    >
                      2
                    </td>
                    <td
                      class="emotion-16"
                    >
                      <div
                        class="emotion-17"
                      >
                        <p
                          class="emotion-18"
                        >
                          description
                        </p>
                      </div>
                    </td>
                    <td
                      class="emotion-16"
                    >
                      <div
                        class="emotion-20"
                      >
                        <p
                          class="emotion-18"
                        >
                          value
                        </p>
                      </div>
                    </td>
                    <td
                      class="emotion-16"
                    >
                      description
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <p />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accessibility renders focus order table with keyCombo if data is provided 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -80px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -80px -12px 0 -12px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 80px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    margin-bottom: 20px;
  }
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-5 svg {
  fill: #162740;
}

@media screen and (max-width: 1439px) {
  .emotion-5 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.24062499999999998em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.490625em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-5 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20729166666666665em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.45729166666666665em;
  }
}

.emotion-6 {
  margin-bottom: 32px;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-7 svg {
  fill: #555E74;
}

@media screen and (max-width: 1439px) {
  .emotion-7 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-7 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.33229166666666665em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36354166666666665em;
  }
}

.emotion-8 {
  overflow-x: auto;
}

.emotion-9 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-10 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-11 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-13 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-14 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 24px;
  height: 24px;
}

.emotion-16 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #FFFFFF;
  background-color: #577FFB;
  border-radius: 20rem;
  white-space: nowrap;
}

.emotion-16 svg {
  width: 16px;
  height: 16px;
}

.emotion-16 svg {
  fill: #FFFFFF;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-18 {
    max-width: 100%;
  }
}

.emotion-19 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 600;
  letter-spacing: 0;
}

.emotion-19::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.2549107142857143em + 1.2px);
}

.emotion-19::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5049107142857143em;
}

.emotion-20 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  white-space: nowrap;
  vertical-align: top;
}

.emotion-21 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              Focus order
            </span>
          </div>
          <div
            class="emotion-6"
          >
            <p
              class="emotion-7"
            >
              Some random text here
            </p>
            <div
              class="emotion-8"
            >
              <table
                class="emotion-9"
              >
                <thead>
                  <tr>
                    <th
                      class="emotion-10"
                    >
                      Order
                    </th>
                    <th
                      class="emotion-11"
                    >
                      Element
                    </th>
                    <th
                      class="emotion-11"
                    >
                      Role
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="emotion-13"
                  >
                    <td
                      class="emotion-14"
                    >
                      <div
                        class="emotion-15"
                      >
                        <div
                          class="emotion-16"
                          data-testid="flag"
                        >
                          <div
                            class="emotion-17"
                          >
                            <div
                              class="emotion-18"
                            >
                              <span
                                class="emotion-19"
                              >
                                1
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="emotion-20"
                    >
                      element
                    </td>
                    <td
                      class="emotion-21"
                    >
                      Role
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <p />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Accessibility renders keyboard interactions table with keyCombo if data is provided 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-1 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    margin: -80px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    margin: -80px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    margin: -80px -12px 0 -12px;
  }
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-3 {
    padding: 0 8px;
    margin-top: 80px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    padding: 0 12px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    margin-bottom: 20px;
  }
}

.emotion-5 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-5 svg {
  fill: #162740;
}

@media screen and (max-width: 1439px) {
  .emotion-5 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.24062499999999998em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.490625em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-5 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    letter-spacing: 0;
  }

  .emotion-5::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20729166666666665em;
  }

  .emotion-5::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.45729166666666665em;
  }
}

.emotion-6 {
  margin-bottom: 32px;
}

.emotion-7 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-7 svg {
  fill: #555E74;
}

@media screen and (max-width: 1439px) {
  .emotion-7 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-7 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    letter-spacing: 0;
  }

  .emotion-7::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.33229166666666665em;
  }

  .emotion-7::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36354166666666665em;
  }
}

.emotion-8 {
  overflow-x: auto;
}

.emotion-9 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-10 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-11 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-12 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-13 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  white-space: nowrap;
  vertical-align: top;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-15 {
    max-width: 100%;
  }
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-17 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #555E74;
  background-color: #F4F4F4;
  border-radius: 4px;
  white-space: nowrap;
  margin-top: -4px;
}

.emotion-17 svg {
  width: 16px;
  height: 16px;
}

.emotion-17 svg {
  fill: #555E74;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-19 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-19 {
    max-width: 100%;
  }
}

.emotion-21 {
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.4285714285714286;
  letter-spacing: 0;
}

.emotion-21::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4267857142857143em;
}

.emotion-21::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3642857142857143em;
}

.emotion-23 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-23.emotion-23 {
  width: 16px;
  height: 16px;
}

.emotion-32 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              Keyboard Interactions
            </span>
          </div>
          <div
            class="emotion-6"
          >
            <p
              class="emotion-7"
            >
              Some random text
            </p>
            <div
              class="emotion-8"
            >
              <table
                class="emotion-9"
              >
                <thead>
                  <tr>
                    <th
                      class="emotion-10"
                    >
                      Command
                    </th>
                    <th
                      class="emotion-11"
                    >
                      Description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="emotion-12"
                  >
                    <td
                      class="emotion-13"
                    >
                      <div
                        class="emotion-14"
                      >
                        <div
                          class="emotion-15"
                        >
                          <div
                            class="emotion-16"
                          >
                            <div
                              class="emotion-17"
                              data-testid="flag"
                            >
                              <div
                                class="emotion-18"
                              >
                                <div
                                  class="emotion-19"
                                />
                                <div
                                  class="emotion-19"
                                >
                                  <span
                                    class="emotion-21"
                                  >
                                    ctrl
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="emotion-15"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-23 emotion-24"
                            fill="currentColor"
                            focusable="false"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-15"
                        >
                          <div
                            class="emotion-16"
                          >
                            <div
                              class="emotion-17"
                              data-testid="flag"
                            >
                              <div
                                class="emotion-18"
                              >
                                <div
                                  class="emotion-19"
                                />
                                <div
                                  class="emotion-19"
                                >
                                  <span
                                    class="emotion-21"
                                  >
                                    esc
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                    <td
                      class="emotion-32"
                    >
                      description
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <p />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
